# DevOpsAssignments

./: README.md
week1/assignment1-linux/: README.md  command-line.md  welcome.txt
week1/assignment2-git/: README.md
week1/assignment2-git/template/: diffodill.sh
week1/assignment2-git/template/example/: version_1.txt  version_2.txt
week1/assignment3-gitlab/: README.md
week2/assignment1-scripting/: README.md  higher_lower.sh  numbers.data  sum.sh  trash.sh
week2/assignment1-scripting/trash/: trash3.txt  trash4.txt
week2/assignment2-advanced/: README.md  cron.txt  pyproject.toml  web.py
week3/: .gitlab-ci.yml  film_actors.csv  main.py  pyproject.toml
week3/python-devop/: README.md  pyproject.toml
week3/python-devop/csvprinter/: main.py  main_cli.py
week3/python-devop/python_devop/: helloworld.py
week3/python-devop/tests/: test_python_devop.py
week4/: README.md  todo.sh
week4/0-primer/: Dockerfile  analysis.txt  script.sh
week4/1-container/: Dockerfile  index.html  log.txt  start.sh  style.css
week4/4-complete/: docker-compose.yml
week4/4-complete/backend/: Dockerfile
week5/: README.md
