[tool.poetry]
name = "python-devop"
version = "0.1.0"
description = ""
authors = ["sebvdw <sebastianvandw@gmail.com>"]
readme = "README.md"
packages = [{include = "python_devop"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
